k8s/31-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: library-catalog
spec:
  selector:
    app: catalog-api
  ports:
    - port: 8000
      targetPort: 8000
