k8s/41-reviews-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews-api
  namespace: library-catalog
spec:
  selector:
    app: reviews-api
  ports:
    - port: 8000
      targetPort: 8000
