k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  namespace: library-catalog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: library.local
      http:
        paths:
          - path: /catalog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalog-api
                port:
                  number: 8000
          - path: /reviews(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: reviews-api
                port:
                  number: 8000
